# mechanical_parts_inventory

./: README.md  app.py  db.py  index.html  infer.py  inventory.html  model.py  pyproject.toml  result.html  training script.ipynb
